force-app/main/default/objects/Case/fields/Assignment_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Change_Type__c</fullName>
    <label>Assignment Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assignment Request</fullName>
            </value>
            <value>
                <fullName>Assignment Drop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>