force-app/main/default/objects/Case/fields/Assignment_Comment__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Comment__c</fullName>
    <label>Assignment Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>