force-app/main/default/objects/Case/fields/Assignment_Request__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>