force-app/main/default/objects/Case/fields/Assignment_Request_Stage__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Request_Stage__c</fullName>
    <label>Prospect Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Capacity Research</fullName>
                <isActive>false</isActive>
                <label>Capacity Research</label>
            </value>
            <value>
                <fullName>Prospect Consultant Review</fullName>
                <isActive>false</isActive>
                <label>Prospect Consultant Review</label>
            </value>
            <value>
                <fullName>Prospect Team Review</fullName>
                <isActive>false</isActive>
                <label>Prospect Team Review</label>
            </value>
            <value>
                <fullName>SRD Review</fullName>
                <isActive>false</isActive>
                <label>SRD Review</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <isActive>false</isActive>
                <label>Submitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>