force-app/main/default/objects/Case/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Secondary Relationship Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>