force-app/main/default/objects/Case/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <label>Background</label>
    <type>TextArea</type>
</CustomField>