force-app/main/default/objects/Case/fields/Business_Address_Region__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_Region__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Address Region</label>
    <type>Text</type>
</CustomField>