force-app/main/default/objects/Case/fields/Capacity_Not_Recent__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Not_Recent__c</fullName>
    <formula>OR(ISBLANK(Account.ND_Wealth_Rating__c),(TODAY()- Account.ND_Last_Wealth_Rating_Date__c &gt; 700))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Capacity rating has not been completed or is older than 3 years.</inlineHelpText>
    <label>Capacity Not Recent</label>
    <type>Checkbox</type>
</CustomField>