force-app/main/default/objects/Case/fields/Capacity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Rating__c</fullName>
    <label>Capacity Rating</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>