force-app/main/default/objects/Case/fields/Confirmed_Death_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Death_Date__c</fullName>
    <label>Confirmed Death Date</label>
    <type>Date</type>
</CustomField>