force-app/main/default/objects/Case/fields/Contact_Report__c.field-meta.xml
<CustomField>
    <fullName>Contact_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Report</label>
    <referenceTo>ucinn_ascendv2__Contact_Report__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>