force-app/main/default/objects/Case/fields/Date_of_Last_Rating__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Rating__c</fullName>
    <label>Date of Last Rating</label>
    <type>Date</type>
</CustomField>