force-app/main/default/objects/Case/fields/DC__c.field-meta.xml
<CustomField>
    <fullName>DC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>