force-app/main/default/objects/Case/fields/Designation_Name__c.field-meta.xml
<CustomField>
    <fullName>Designation_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(ND_Designation_Account__c)), ND_Designation_Detail__r.ucinn_ascendv2__Acknowledgement_Description_Formula__c &amp; &quot;, &quot; &amp; TEXT(ND_Designation_Detail__r.ucinn_ascendv2__Designation__r.ucinn_ascendv2__Fund_Type__c), &quot;&quot;)</formula>
    <inlineHelpText>Designation Name and Classification of Gift (Designation Fund Type)</inlineHelpText>
    <label>Designation Name</label>
    <type>Text</type>
</CustomField>