force-app/main/default/objects/Case/fields/Donor_Profile__c.field-meta.xml
<CustomField>
    <fullName>Donor_Profile__c</fullName>
    <label>Donor Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Engaged and RD Helpful</fullName>
            </value>
            <value>
                <fullName>Donor Not Engaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>