force-app/main/default/objects/Case/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wealth Rating</label>
    <referenceTo>ucinn_ascendv2__Wealth_Rating__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>