force-app/main/default/objects/Case/fields/Fundraiser_Region__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_Region__c</fullName>
    <formula>TEXT(Fundraiser__r.ND_Group_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fundraiser Region</label>
    <type>Text</type>
</CustomField>