force-app/main/default/objects/Case/fields/Gift_Stage__c.field-meta.xml
<CustomField>
    <fullName>Gift_Stage__c</fullName>
    <formula>ND_Designation_Detail__r.ucinn_ascendv2__Pledge_Status_Formula__c</formula>
    <label>Gift Stage</label>
    <type>Text</type>
</CustomField>