force-app/main/default/objects/Case/fields/Home_Address_Region__c.field-meta.xml
<CustomField>
    <fullName>Home_Address_Region__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Address Region</label>
    <type>Text</type>
</CustomField>