force-app/main/default/objects/Case/fields/Household_or_Organization__c.field-meta.xml
<CustomField>
    <fullName>Household_or_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household or Organization - DEPRECATED</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Household</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>