force-app/main/default/objects/Case/fields/Initiate_Request__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Request__c</fullName>
    <inlineHelpText>What did you learn to initiate this request?</inlineHelpText>
    <label>Initiate Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>