force-app/main/default/objects/Case/fields/ND_Amount_Paid_to_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Amount_Paid_to_Date__c</fullName>
    <formula>ND_Designation_Detail__r.ucinn_ascendv2__Amt_Paid_to_Date_Same_Desig_Roll_Up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>