force-app/main/default/objects/Case/fields/nd_Case_Record_Type_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>nd_Case_Record_Type_Dev_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Case Record Type Dev Name</label>
    <type>Text</type>
</CustomField>