force-app/main/default/objects/Case/fields/ND_Comments__c.field-meta.xml
<CustomField>
    <fullName>ND_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>