force-app/main/default/objects/Case/fields/nd_Constituent_Email__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_Email__c</fullName>
    <formula>Contact.Email</formula>
    <label>Constituent Email</label>
    <type>Text</type>
</CustomField>