force-app/main/default/objects/Case/fields/nd_Constituent_ID__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_ID__c</fullName>
    <formula>Contact.ucinn_ascendv2__Donor_ID__c</formula>
    <label>Constituent ID</label>
    <type>Text</type>
</CustomField>