force-app/main/default/objects/Case/fields/nd_Constituent_Preferred_Address__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_Preferred_Address__c</fullName>
    <formula>Contact.ucinn_ascendv2__Preferred_Address_Formula__c</formula>
    <label>Constituent Preferred Address</label>
    <type>Text</type>
</CustomField>