force-app/main/default/objects/Case/fields/nd_Constituent_Religious_Preference__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_Religious_Preference__c</fullName>
    <formula>TEXT(Contact.ucinn_ascendv2__Religious_Preference__c)</formula>
    <label>Constituent Religious Preference</label>
    <type>Text</type>
</CustomField>