force-app/main/default/objects/Case/fields/nd_Constituent_Salutation_Informal__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_Salutation_Informal__c</fullName>
    <formula>Contact.nd_Salutation_Informal__c</formula>
    <label>Constituent Salutation (Informal)</label>
    <type>Text</type>
</CustomField>