force-app/main/default/objects/Case/fields/nd_Constituent_Spouse_Email__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_Spouse_Email__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact.ucinn_ascendv2__Preferred_Spouse__c)),
				Contact.ucinn_ascendv2__Preferred_Spouse__r.Email, Contact.nd_Partner_Significant_Other__r.Email)</formula>
    <label>Constituent Spouse Email</label>
    <type>Text</type>
</CustomField>