force-app/main/default/objects/Case/fields/nd_Constituent_Spouse_ID__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_Spouse_ID__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact.ucinn_ascendv2__Preferred_Spouse__c)),
				Contact.ucinn_ascendv2__Preferred_Spouse__r.ucinn_ascendv2__Donor_ID__c, Contact.nd_Partner_Significant_Other__r.ucinn_ascendv2__Donor_ID__c)</formula>
    <label>Constituent Spouse ID</label>
    <type>Text</type>
</CustomField>