force-app/main/default/objects/Case/fields/nd_Constituent_Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_Spouse_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact.ucinn_ascendv2__Preferred_Spouse__c)),
Contact.ucinn_ascendv2__Preferred_Spouse__r.ucinn_ascendv2__Full_Name_Formula__c , Contact.nd_Partner_Significant_Other__r.ucinn_ascendv2__Full_Name_Formula__c )</formula>
    <label>Constituent Spouse Name</label>
    <type>Text</type>
</CustomField>