force-app/main/default/objects/Case/fields/nd_Constituent_Spouse_Salutation_Inform__c.field-meta.xml
<CustomField>
    <fullName>nd_Constituent_Spouse_Salutation_Inform__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact.ucinn_ascendv2__Preferred_Spouse__c)),
				Contact.ucinn_ascendv2__Preferred_Spouse__r.nd_Salutation_Informal__c, Contact.nd_Partner_Significant_Other__r.nd_Salutation_Informal__c)</formula>
    <label>Constituent Spouse Salutation (Informal)</label>
    <type>Text</type>
</CustomField>