force-app/main/default/objects/Case/fields/nd_Cumulative_Impact__c.field-meta.xml
<CustomField>
    <fullName>nd_Cumulative_Impact__c</fullName>
    <label>Cumulative Impact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>