force-app/main/default/objects/Case/fields/nd_Current_CASE_FY_1_Override__c.field-meta.xml
<CustomField>
    <fullName>nd_Current_CASE_FY_1_Override__c</fullName>
    <label>Current CASE FY - 1 Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>