force-app/main/default/objects/Case/fields/ND_Designation_Account__c.field-meta.xml
<CustomField>
    <fullName>ND_Designation_Account__c</fullName>
    <formula>ND_Designation_Detail__r.ucinn_ascendv2__Designation__r.ucinn_ascendv2__G_L_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Designation Account</inlineHelpText>
    <label>Designation Account</label>
    <type>Text</type>
</CustomField>