force-app/main/default/objects/Case/fields/ND_Designation_Detail__c.field-meta.xml
<CustomField>
    <fullName>ND_Designation_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation Detail</label>
    <referenceTo>ucinn_ascendv2__Designation_Detail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>