force-app/main/default/objects/Case/fields/nd_Designation_Steward_Reporting_Code__c.field-meta.xml
<CustomField>
    <fullName>nd_Designation_Steward_Reporting_Code__c</fullName>
    <label>Designation Steward Reporting Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Steward_Reporting_Code</valueSetName>
    </valueSet>
</CustomField>