force-app/main/default/objects/Case/fields/nd_Development_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>nd_Development_Coordinator__c</fullName>
    <formula>Account.ucinn_ascendv2__PRM__r.Development_Coordinator__r.FirstName &amp; &quot; &quot; &amp;  Account.ucinn_ascendv2__PRM__r.Development_Coordinator__r.LastName</formula>
    <label>Development Coordinator</label>
    <type>Text</type>
</CustomField>