force-app/main/default/objects/Case/fields/nd_Display_for_DC__c.field-meta.xml
<CustomField>
    <fullName>nd_Display_for_DC__c</fullName>
    <description>Indicator for whether or not the constituent&apos;s PRM&apos;s DC is the same as the user.</description>
    <formula>Account.ucinn_ascendv2__PRM__r.Development_Coordinator__c= $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator for whether or not the constituent&apos;s PRM&apos;s DC is the same as the user.</inlineHelpText>
    <label>Display for DC</label>
    <type>Checkbox</type>
</CustomField>