force-app/main/default/objects/Case/fields/nd_Display_for_GPO__c.field-meta.xml
<CustomField>
    <fullName>nd_Display_for_GPO__c</fullName>
    <description>Indicator for whether or not the requestor&apos;s GPO is the logged in user</description>
    <formula>Account.ucinn_ascendv2__PRM__r.nd_Gift_Planning_Officer__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator for whether or not the requestor&apos;s GPO is the logged in user</inlineHelpText>
    <label>Display for GPO</label>
    <type>Checkbox</type>
</CustomField>