force-app/main/default/objects/Case/fields/nd_Display_for_Research__c.field-meta.xml
<CustomField>
    <fullName>nd_Display_for_Research__c</fullName>
    <description>Indicator for whether or not the case owner has a Research role</description>
    <formula>Owner:User.UserRole.Name=&quot;Development Research&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator for whether or not the case owner has a Research role</inlineHelpText>
    <label>Display for Research</label>
    <type>Checkbox</type>
</CustomField>