force-app/main/default/objects/Case/fields/nd_Early_Deadline__c.field-meta.xml
<CustomField>
    <fullName>nd_Early_Deadline__c</fullName>
    <label>Early Deadline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>