force-app/main/default/objects/Case/fields/nd_Early_Deadline_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>nd_Early_Deadline_Due_Date__c</fullName>
    <label>Early Deadline Due Date</label>
    <type>Date</type>
</CustomField>