force-app/main/default/objects/Case/fields/nd_Executive_Approval__c.field-meta.xml
<CustomField>
    <fullName>nd_Executive_Approval__c</fullName>
    <label>Executive Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Changes Needed</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>