force-app/main/default/objects/Case/fields/ND_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>ND_Fiscal_Year__c</fullName>
    <formula>IF(MONTH(Requested_Completion_Date__c)&gt;=7, TEXT(Year(Requested_Completion_Date__c)+1), TEXT(Year(Requested_Completion_Date__c)))</formula>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>