force-app/main/default/objects/Case/fields/nd_FY_Gifts_to_Expendable_Override__c.field-meta.xml
<CustomField>
    <fullName>nd_FY_Gifts_to_Expendable_Override__c</fullName>
    <label>FY Gifts to Expendable Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>