force-app/main/default/objects/Case/fields/ND_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>ND_Gift_Amount__c</fullName>
    <formula>ND_Designation_Detail__r.ucinn_ascendv2__Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>