force-app/main/default/objects/Case/fields/ND_Gift_Designation_Percent_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>ND_Gift_Designation_Percent_Fulfilled__c</fullName>
    <formula>ND_Designation_Detail__r.ND_Percent_Fulfilled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Designation Percent Fulfilled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>