force-app/main/default/objects/Case/fields/nd_Gift_Planning_Officer__c.field-meta.xml
<CustomField>
    <fullName>nd_Gift_Planning_Officer__c</fullName>
    <formula>Account.ucinn_ascendv2__PRM__r.nd_Gift_Planning_Officer__r.FirstName &amp; &quot; &quot; &amp; Account.ucinn_ascendv2__PRM__r.nd_Gift_Planning_Officer__r.LastName</formula>
    <label>Gift Planning Officer</label>
    <type>Text</type>
</CustomField>