force-app/main/default/objects/Case/fields/nd_Impact_Statement__c.field-meta.xml
<CustomField>
    <fullName>nd_Impact_Statement__c</fullName>
    <label>Impact Statement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>