force-app/main/default/objects/Case/fields/nd_Include_in_Timeline__c.field-meta.xml
<CustomField>
    <fullName>nd_Include_in_Timeline__c</fullName>
    <description>Field evaluates to TRUE if this record should appear on the Timeline component</description>
    <formula>OR( RecordType.DeveloperName = &apos;Individual_Stewardship&apos;, RecordType.DeveloperName = &apos;Stewardship_Acknowledgment&apos;)</formula>
    <label>Include in Timeline</label>
    <type>Checkbox</type>
</CustomField>