force-app/main/default/objects/Case/fields/nd_Link_to_Letter__c.field-meta.xml
<CustomField>
    <fullName>nd_Link_to_Letter__c</fullName>
    <label>Link to Letter</label>
    <type>Url</type>
</CustomField>