force-app/main/default/objects/Case/fields/nd_Number_of_Days_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>nd_Number_of_Days_in_Progress__c</fullName>
    <formula>IF(ISBLANK( ClosedDate ),
			TODAY() - DATEVALUE(CreatedDate),
			DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate))</formula>
    <label>Number of Days in Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>