force-app/main/default/objects/Case/fields/nd_Organizational_Stewardee__c.field-meta.xml
<CustomField>
    <fullName>nd_Organizational_Stewardee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organizational Stewardee</label>
    <type>Checkbox</type>
</CustomField>