force-app/main/default/objects/Case/fields/nd_Perpetual__c.field-meta.xml
<CustomField>
    <fullName>nd_Perpetual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perpetual</label>
    <type>Checkbox</type>
</CustomField>