force-app/main/default/objects/Case/fields/nd_Pledge_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>nd_Pledge_Gift_Amount__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <label>Pledge/Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>